--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2080,8 +2080,8 @@ input, select, textarea {
 		background: rgba(144, 144, 144, 0.075);
 		border-radius: 4px;
 		border: none;
-		border: solid 1px rgba(144, 144, 144, 0.5);
-		color: inherit;
+		border: solid 1px rgba(184, 184, 184, 0.5);
+		color: black !important;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
